# HTStorage

./: CMakeLists.txt  CleanUpForNextRun.sh  Client.cpp  Client.h  Execution.cpp  Execution.h  Job.cpp  Job.h  Job_Queue.cpp  Job_Queue.h  LICENSE  Manager.cpp  Manager.h  NOTICE  README.md  Rebuild.sh  Resource.cpp  Resource.h  ResourceAd.cpp  ResourceAd.h  SetUpAWSInstance.sh  SharedFiles.cpp  SharedFiles.h  Shared_Files.cpp  Shared_Files.h  Storage.cpp  Storage.h  clientApp.cpp  clientApp.h  fastRebuild.sh  localRun.cpp  main.cpp  managerApp.cpp  managerApp.h  pinger.cpp  pinger.h  runClient.cpp  runExecution.cpp  runManager.cpp  runSimulation.cpp  (+3 more)
Google_tests/: CMakeLists.txt  JobTest.cpp  SharedFilesTest.cpp
Google_tests/testfiles/: simpleRun.txt
workingDir/execution/: 0
